# wifebot

./: LICENSE  README.md  pyproject.toml
examples/: config.json
prompts/: base_task.jinja  bumble_instructions.txt  hinge_instructions.txt  okcupid_instructions.txt  tinder_instructions.txt
wifebot/: __init__.py  bumble.py  factory.py  hinge.py  loader.py  main.py  okcupid.py  platform.py  tinder.py
